crates/aranya-policy-compiler/tests/data/commands/no_return_in_open.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: pure function has no return statement
  |
4 |     open { let x = 3 }
  |            ^^^^^^^^^^ No return found in this function body
